[package]
name = "chicago-gtfs-rt"
version = "0.3.2"
edition = "2021"
license = "AGPL-3.0"
authors = ["Samuel Sharp <samuel@catenarymaps.org>", "Kyler Chin <kyler@catenarymaps.org>", "Ethan Charoenpitaks <echaroenpitaks@catenarymaps.org>"]
description = "Conversion of all Chicago Transit Authority data into GTFS Realtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-realtime = "0.2.0"
reqwest = {version = "0.12.23", features = ["deflate","gzip","brotli","rustls-tls"]}
inline_colorization = "0.1.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.3.1"
chrono = "0.4.41"
chrono-tz = "0.10.4"
gtfs-structures = "0.46"

[dev-dependencies]
zip = "6.0.0"
zip-extract = "0.4.1"
tokio = { features = ["full"], version = "1.46.1" }